# program

./: 3d.cpp  README.md  test.cpp  test_glm.cpp  test_plus.cpp
2025_07_08/: 1.cpp
ad/opengl-advanced-simulation/: CMakeLists.txt  README.md
ad/opengl-advanced-simulation/shaders/fragment/: basic.frag  pbr.frag  phong.frag
ad/opengl-advanced-simulation/shaders/vertex/: basic.vert  pbr.vert  phong.vert
ad/opengl-advanced-simulation/src/: main.cpp
ad/opengl-advanced-simulation/src/camera/: Camera.cpp  Camera.h
ad/opengl-advanced-simulation/src/core/: Application.cpp  Application.h  Window.cpp  Window.h
ad/opengl-advanced-simulation/src/lighting/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
ad/opengl-advanced-simulation/src/objects/: Cube.cpp  Cube.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
ad/opengl-advanced-simulation/src/physics/: PhysicsEngine.cpp  PhysicsEngine.h  RigidBody.cpp  RigidBody.h
ad/opengl-advanced-simulation/src/renderer/: Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
ad/opengl-advanced-simulation/src/utils/: FileLoader.cpp  FileLoader.h  Math.h
after_eight_month/: create_ice.cpp  water_liked.cpp
book_exercise/: 2_1.cpp  2_2.cpp  2_3.cpp  2_3_plus.cpp  2_4.cpp  fragShader.glsl  test.cpp  test_glm.cpp  vertShader.glsl
cube_array_test/: test_cube.cpp
learning_opengl/: 1.1.cpp  1.cpp  2.cpp  3.cpp  4.cpp  my_trai.cpp
mouse_with_circle/: test_for_mouse.cpp
old_program/: 2025_04_25_20.cpp  3d.cpp  (+2 more)
(+36 files in other folders)
